--- a/App_GlobalResources/ErrorMessages.de.resx
+++ b/App_GlobalResources/ErrorMessages.de.resx
@@ -195,9 +195,9 @@
   <data name="ERROR_SECURITY_ANSWER_INVALID" xml:space="preserve">
     <value>Ungültige Sicherheitsantwort.</value>
   </data>
-    <data name="ERROR_SECURITY_QUESTION_INVALID" xml:space="preserve">
-        <value>Es können nicht sowohl die Sicherheitsfrage als auch die benutzerdefinierte Sicherheitsfrage festgelegt werden.</value>
-    </data>
+  <data name="ERROR_SECURITY_QUESTION_INVALID" xml:space="preserve">
+    <value>Es können nicht sowohl die Sicherheitsfrage als auch die benutzerdefinierte Sicherheitsfrage festgelegt werden.</value>
+  </data>
   <data name="ERROR_SUBSCRIBER_NULL" xml:space="preserve">
     <value>Sie müssen ein Konto erst verwalten, bevor Sie Aktionen durchführen können.</value>
   </data>
@@ -247,7 +247,7 @@
     <value>Die Konfigurationsänderungen können nicht gespeichert werden. Details finden Sie im Protokoll.</value>
   </data>
   <data name="ERROR_MULTIPLE_ACCOUNT_UPDATE_PENDING_CHANGES" xml:space="preserve">
-    <value>[DE]</value>
+    <value>[DE]This account already has a pending change of type Account Update. Only one pending change of this type is permitted.</value>
   </data>
   <data name="SpecCharacteristicRepository_DeleteSpecCharacteristic_Failed_deleting_spec_" xml:space="preserve">
     <value>Die Spezifikation konnte nicht gelöscht werden.</value>
@@ -275,5 +275,35 @@
   </data>
   <data name="SpecCharacteristicsController_SetDisplayOrder_Couldn_t_find_property_" xml:space="preserve">
     <value>Die Eigenschaft konnte nicht gefunden werden.</value>
+  </data>
+  <data name="ERROR_USERNAME_LOCKED" xml:space="preserve">
+    <value>[DE]You have exceeded the number of logins attempts and your account is locked. Please contact your system admin.</value>
+  </data>
+  <data name="ERROR_PAYER_ID_IS_REQUIRED" xml:space="preserve">
+    <value>[DE]Invalid or Missing Payer</value>
+  </data>
+  <data name="ERROR_INVALID_CURRENCY" xml:space="preserve">
+    <value>[DE]Invalid Currency</value>
+  </data>
+  <data name="ERROR_INVALID_PARTITIONID" xml:space="preserve">
+    <value>[DE]Invalid Partition ID</value>
+  </data>
+  <data name="ERROR_REPORT_CONFIG" xml:space="preserve">
+    <value>[DE]Error in config ReportFormat file</value>
+  </data>
+  <data name="ERROR_REPORT_FORMAT" xml:space="preserve">
+    <value>[DE]Error in config ReportFormat file. Report format type isn't defined.</value>
+  </data>
+  <data name="ERROR_REPORT_FORMAT_CONFIG" xml:space="preserve">
+    <value>[DE]Error in config ReportFormat file. Incorrect file structure.</value>
+  </data>
+  <data name="ERROR_REPORT_IMAGE" xml:space="preserve">
+    <value>[DE]Error in config ReportFormat file. Report image  isn't defined.</value>
+  </data>
+  <data name="ERROR_REPORT_OPEN" xml:space="preserve">
+    <value>[DE]Unable open and save report</value>
+  </data>
+  <data name="ERROR_PO_EXISTS" xml:space="preserve">
+    <value>[DE]Name of product offering must be unique</value>
   </data>
 </root>
