--- a/App_GlobalResources/FileManagementResources.it.resx
+++ b/App_GlobalResources/FileManagementResources.it.resx
@@ -139,7 +139,7 @@
         <value>Proprietà dell'argomento</value>
     </data>
     <data name="ASSEMBLY_TITLE" xml:space="preserve">
-        <value>Assembly</value>
+        <value>[IT]Assembly</value>
     </data>
     <data name="DETAIL_COMMAND" xml:space="preserve">
         <value>Comando eseguito</value>
@@ -148,7 +148,7 @@
         <value>Codice errore corrente</value>
     </data>
     <data name="DETAIL_CURRENT_ERROR_MESSAGE" xml:space="preserve">
-        <value>Current Error Message</value>
+        <value>[IT]Current Error Message</value>
     </data>
     <data name="DETAIL_CURRENT_STATE" xml:space="preserve">
         <value>Stato corrente</value>
@@ -184,7 +184,7 @@
         <value>Data</value>
     </data>
     <data name="FILE_ERROR_MESSAGE" xml:space="preserve">
-        <value>Error Message</value>
+        <value>[IT]Error Message</value>
     </data>
     <data name="FILE_GENERAL_TITLE" xml:space="preserve">
         <value>File</value>
