--- a/App_GlobalResources/MainMenu.es-MX.resx
+++ b/App_GlobalResources/MainMenu.es-MX.resx
@@ -120,6 +120,9 @@
   <data name="TEXT_ACCOUNT_DETAILS" xml:space="preserve">
     <value>Detalles de la cuenta</value>
   </data>
+  <data name="TEXT_ACCOUNT_QUOTING_LIST" xml:space="preserve">
+    <value>[es-MX]Quotes</value>
+  </data>
   <data name="TEXT_ACCOUNT_STATE" xml:space="preserve">
     <value>Estado de la cuenta</value>
   </data>
@@ -138,6 +141,9 @@
   <data name="TEXT_ADD_ACCOUNT_WEBSERVICE" xml:space="preserve">
     <value>Agregar cuenta con servicio web</value>
   </data>
+  <data name="TEXT_ADD_CHILD_ACCOUNT" xml:space="preserve">
+    <value>[es-MX]Add child Account</value>
+  </data>
   <data name="TEXT_ADD_CSR" xml:space="preserve">
     <value>Agregar CSR</value>
   </data>
@@ -146,6 +152,9 @@
   </data>
   <data name="TEXT_ADD_NEW_REPORT_PARAMETERS" xml:space="preserve">
     <value>Agregar nuevos parámetros de informe</value>
+  </data>
+  <data name="TEXT_ADD_PARTITION" xml:space="preserve">
+    <value>[es-MX]Add Partition</value>
   </data>
   <data name="TEXT_ADJUST_TRANSACTIONS" xml:space="preserve">
     <value>Ajustar transacciones</value>
@@ -158,6 +167,12 @@
   </data>
   <data name="TEXT_ADVANCED_OPTIONS" xml:space="preserve">
     <value>Opciones avanzadas</value>
+  </data>
+  <data name="TEXT_AGREEMENT_TEMPLATES" xml:space="preserve">
+    <value>[es-MX]Agreement Templates</value>
+  </data>
+  <data name="TEXT_AGREEMENTS" xml:space="preserve">
+    <value>[es-MX]Agreements</value>
   </data>
   <data name="TEXT_ALL_FILES" xml:space="preserve">
     <value>Todos los trabajos</value>
@@ -173,6 +188,9 @@
   </data>
   <data name="TEXT_APPROVAL_FRAMEWORK_MANAGEMENT" xml:space="preserve">
     <value>[es-MX]Approvals</value>
+  </data>
+  <data name="TEXT_ASSIGN_BILL_MESSAGES" xml:space="preserve">
+    <value>[es-MX]Assign Bill Messages</value>
   </data>
   <data name="TEXT_ASSIGN_UPDATE_REPORT_PARAMETERS" xml:space="preserve">
     <value>Asignar parámetros de informe</value>
@@ -261,6 +279,9 @@
   <data name="TEXT_CREATE_NEW_REPORT_INSTANCE" xml:space="preserve">
     <value>Agregar nueva instancia de informe</value>
   </data>
+  <data name="TEXT_CREATE_QUOTE" xml:space="preserve">
+    <value>[es-MX]Create Quote</value>
+  </data>
   <data name="TEXT_CREATE_REMITTANCE" xml:space="preserve">
     <value>Crear remesa</value>
   </data>
@@ -342,11 +363,26 @@
   <data name="TEXT_MAKE_PAYMENT" xml:space="preserve">
     <value>Efectuar un pago</value>
   </data>
+  <data name="TEXT_MANAGE" xml:space="preserve">
+    <value>[es-MX]Manage</value>
+  </data>
   <data name="TEXT_MANAGE_ACCOUNTS" xml:space="preserve">
     <value>Administrar cuentas</value>
   </data>
   <data name="TEXT_MANAGE_ADJUSTMENTS" xml:space="preserve">
     <value>Administrar ajustes</value>
+  </data>
+  <data name="TEXT_MANAGE_AGREEMENT_TEMPLATES" xml:space="preserve">
+    <value>[es-MX]Manage Agreement Templates</value>
+  </data>
+  <data name="TEXT_MANAGE_AMP_DECISIONS" xml:space="preserve">
+    <value>[es-MX]Decision Types</value>
+  </data>
+  <data name="TEXT_MANAGE_BILLSOFT_EXEMPTIONS" xml:space="preserve">
+    <value>[es-MX]Manage BillSoft Exemptions</value>
+  </data>
+  <data name="TEXT_MANAGE_BILLSOFT_OVERRIDES" xml:space="preserve">
+    <value>[es-MX]Manage BillSoft Overrides</value>
   </data>
   <data name="TEXT_MANAGE_CALENDARS" xml:space="preserve">
     <value>Administrar calendarios</value>
@@ -444,6 +480,9 @@
   <data name="TEXT_PAYMENT_METHODS" xml:space="preserve">
     <value>Métodos de pago</value>
   </data>
+  <data name="TEXT_PAYMENT_TRANSACTIONS" xml:space="preserve">
+    <value>[es-MX]Payment Transactions</value>
+  </data>
   <data name="TEXT_PAYMENTS" xml:space="preserve">
     <value>Pagos</value>
   </data>
@@ -461,6 +500,15 @@
   </data>
   <data name="TEXT_QUEUE_ADHOC_REPORTS" xml:space="preserve">
     <value>Poner informes ad hoc en la cola</value>
+  </data>
+  <data name="TEXT_QUOTING" xml:space="preserve">
+    <value>[es-MX]Manage Quotes</value>
+  </data>
+  <data name="TEXT_QUOTING_LIST" xml:space="preserve">
+    <value>[es-MX]View All Quotes</value>
+  </data>
+  <data name="TEXT_REFRESH" xml:space="preserve">
+    <value>[es-MX]Refresh</value>
   </data>
   <data name="TEXT_REJECTED_FILES" xml:space="preserve">
     <value>Archivos rechazados</value>
@@ -498,14 +546,23 @@
   <data name="TEXT_SECURITY" xml:space="preserve">
     <value>Seguridad</value>
   </data>
+  <data name="TEXT_SELF_CARE_PORTAL" xml:space="preserve">
+    <value>[es-MX]Self Care Portal</value>
+  </data>
   <data name="TEXT_SEND_EMAIL_DIALOG" xml:space="preserve">
     <value>Enviar correo electrónico</value>
+  </data>
+  <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
+    <value>[es-MX]Shared Properties</value>
   </data>
   <data name="TEXT_SHARED_RATES" xml:space="preserve">
     <value>Tarifas compartidas</value>
   </data>
   <data name="TEXT_SHOW_A_REPORT_INSTANCE_DETAILS" xml:space="preserve">
     <value>Mostrar detalles de instancia de informe</value>
+  </data>
+  <data name="TEXT_SHOW_ALL_CHANGES_SUMMARY" xml:space="preserve">
+    <value>[es-MX]View All Changes</value>
   </data>
   <data name="TEXT_SHOW_ALL_REPORT_PARAMETERS" xml:space="preserve">
     <value>Mostrar todos los parámetros de informes</value>
@@ -515,6 +572,15 @@
   </data>
   <data name="TEXT_SHOW_DATAEXPORT_QUEUE_DASHBOARD" xml:space="preserve">
     <value>Cola de exportación de datos</value>
+  </data>
+  <data name="TEXT_SHOW_FAILED_CHANGES_SUMMARY" xml:space="preserve">
+    <value>[es-MX]View Failed Changes</value>
+  </data>
+  <data name="TEXT_SHOW_ITEM_HISTORY" xml:space="preserve">
+    <value>[es-MX]View Item History</value>
+  </data>
+  <data name="TEXT_SHOW_PENDING_CHANGES_SUMMARY" xml:space="preserve">
+    <value>[es-MX]View Pending Changes</value>
   </data>
   <data name="TEXT_SUBSCRIBER_LOG_ADD" xml:space="preserve">
     <value>Agregar entrada de registro</value>
@@ -561,9 +627,6 @@
   <data name="TEXT_UPDATE_EXISTING_REPORT_DEFINITIONS" xml:space="preserve">
     <value>Actualizar definición de informe existente</value>
   </data>
-  <data name="TEXT_USAGE_AUDIT" xml:space="preserve">
-    <value>{ES-MX}Usage Calculation Decision Details</value>
-  </data>
   <data name="TEXT_USM" xml:space="preserve">
     <value>Mantenimiento de servidor de uso</value>
   </data>
@@ -582,14 +645,20 @@
   <data name="TEXT_VIEWONLINE_BILL" xml:space="preserve">
     <value>Ver factura en línea</value>
   </data>
-  <data name="TEXT_MANAGE_AMP_DECISIONS" xml:space="preserve">
-    <value>[es-MX]</value>
+  <data name="TEXT_USAGE_AUDIT" xml:space="preserve">
+    <value>[es-MX]Usage Audit</value>
   </data>
-  <data name="TEXT_ASSIGN_BILL_MESSAGES" xml:space="preserve">
-    <value>[es-MX]</value>
+  <data name="TEXT_ADD_TENANT" xml:space="preserve">
+    <value>[es-MX]Add Partition</value>
   </data>
-  <data name="TEXT_ADD_CHILD_ACCOUNT" xml:space="preserve">
-    <value>[es-MX]Add child Account</value>
+  <data name="TEXT_REPORTS" xml:space="preserve">
+    <value>[es-MX]Reports</value>
+  </data>
+  <data name="TEXT_USAGE_PROCESSING" xml:space="preserve">
+    <value>[es-MX]Usage Processing</value>
+  </data>
+  <data name="TEXT_ACCOUNT" xml:space="preserve">
+    <value>[es-MX]Account</value>
   </data>
   <data name="TEXT_BILL_MESSAGES" xml:space="preserve">
     <value>[es-MX]Bill Messages</value>
@@ -606,28 +675,7 @@
   <data name="TEXT_PRODUCT_DASHBOARD" xml:space="preserve">
     <value>[es-MX]Product Dashboard</value>
   </data>
-  <data name="TEXT_REPORTS" xml:space="preserve">
-    <value>[es-MX] Reports</value>
+  <data name="TEXT_SEARCH" xml:space="preserve">
+    <value>[es-MX]Search</value>
   </data>
-  <data name="TEXT_USAGE_PROCESSING" xml:space="preserve">
-    <value>[es-MX]Usage Processing</value>
-  </data>
-  <data name="TEXT_ADD_PARTITION" xml:space="preserve">
-    <value>[es-MX]Add Partition</value>
-  </data>
-  <data name="TEXT_QUOTING" xml:space="preserve">
-    <value>[es-MX]Manage Quotes</value>
-  </data>
-  <data name="TEXT_ACCOUNT" xml:space="preserve">
-    <value>[es-MX]Account</value>
-  </data>
-  <data name="TEXT_CREATE_QUOTE" xml:space="preserve">
-    <value>[es-MX]Create Quote</value>
-  </data>   
-  <data name="TEXT_QUOTING_LIST" xml:space="preserve">
-    <value>[es-MX]View All Quotes</value>
-  </data>
-  <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
-    <value>[es-MX]Shared Properties</value>
-  </data>     
 </root>
