--- a/App_GlobalResources/MainMenu.pt-br.resx
+++ b/App_GlobalResources/MainMenu.pt-br.resx
@@ -120,6 +120,9 @@
   <data name="TEXT_ACCOUNT_DETAILS" xml:space="preserve">
     <value>Detalhes da conta</value>
   </data>
+  <data name="TEXT_ACCOUNT_QUOTING_LIST" xml:space="preserve">
+    <value>[pt-BR]Quotes</value>
+  </data>
   <data name="TEXT_ACCOUNT_STATE" xml:space="preserve">
     <value>Estado da conta</value>
   </data>
@@ -138,6 +141,9 @@
   <data name="TEXT_ADD_ACCOUNT_WEBSERVICE" xml:space="preserve">
     <value>Adicionar contas com serviço web</value>
   </data>
+  <data name="TEXT_ADD_CHILD_ACCOUNT" xml:space="preserve">
+    <value>[pt-BR]Add child Account</value>
+  </data>
   <data name="TEXT_ADD_CSR" xml:space="preserve">
     <value>Adicionar CSR</value>
   </data>
@@ -146,6 +152,9 @@
   </data>
   <data name="TEXT_ADD_NEW_REPORT_PARAMETERS" xml:space="preserve">
     <value>Adicionar novos parâmetros de relatório</value>
+  </data>
+  <data name="TEXT_ADD_PARTITION" xml:space="preserve">
+    <value>[pt-BR]Add Partition</value>
   </data>
   <data name="TEXT_ADJUST_TRANSACTIONS" xml:space="preserve">
     <value>Ajustar transações</value>
@@ -159,6 +168,12 @@
   <data name="TEXT_ADVANCED_OPTIONS" xml:space="preserve">
     <value>Opções avançadas</value>
   </data>
+  <data name="TEXT_AGREEMENT_TEMPLATES" xml:space="preserve">
+    <value>[pt-BR]Agreement Templates</value>
+  </data>
+  <data name="TEXT_AGREEMENTS" xml:space="preserve">
+    <value>[pt-BR]Agreements</value>
+  </data>
   <data name="TEXT_ALL_FILES" xml:space="preserve">
     <value>Todos os trabalhos</value>
   </data>
@@ -170,6 +185,12 @@
   </data>
   <data name="TEXT_APP_AUDIT_LOG" xml:space="preserve">
     <value>Log de auditoria da aplicação</value>
+  </data>
+  <data name="TEXT_APPROVAL_FRAMEWORK_MANAGEMENT" xml:space="preserve">
+    <value>Aprovações</value>
+  </data>
+  <data name="TEXT_ASSIGN_BILL_MESSAGES" xml:space="preserve">
+    <value>[pt-BR]Assign Bill Messages</value>
   </data>
   <data name="TEXT_ASSIGN_UPDATE_REPORT_PARAMETERS" xml:space="preserve">
     <value>Atribuir parâmetros de relatório</value>
@@ -258,6 +279,9 @@
   <data name="TEXT_CREATE_NEW_REPORT_INSTANCE" xml:space="preserve">
     <value>Adicionar nova instância de relatório</value>
   </data>
+  <data name="TEXT_CREATE_QUOTE" xml:space="preserve">
+    <value>[pt-BR]Create Quote</value>
+  </data>
   <data name="TEXT_CREATE_REMITTANCE" xml:space="preserve">
     <value>Criar remessa</value>
   </data>
@@ -307,7 +331,7 @@
     <value>Resumo por estágio e plugin</value>
   </data>
   <data name="TEXT_FEEDS" xml:space="preserve">
-    <value>Feeds</value>
+    <value>[pt-BR]Feeds</value>
   </data>
   <data name="TEXT_FILE_MANAGEMENT" xml:space="preserve">
     <value>Gerenciamento de arquivos</value>
@@ -339,11 +363,26 @@
   <data name="TEXT_MAKE_PAYMENT" xml:space="preserve">
     <value>Efetuar um pagamento</value>
   </data>
+  <data name="TEXT_MANAGE" xml:space="preserve">
+    <value>[pt-BR]Manage</value>
+  </data>
   <data name="TEXT_MANAGE_ACCOUNTS" xml:space="preserve">
     <value>Gerenciar contas</value>
   </data>
   <data name="TEXT_MANAGE_ADJUSTMENTS" xml:space="preserve">
     <value>Gerenciar ajustes</value>
+  </data>
+  <data name="TEXT_MANAGE_AGREEMENT_TEMPLATES" xml:space="preserve">
+    <value>[pt-BR]Manage Agreement Templates</value>
+  </data>
+  <data name="TEXT_MANAGE_AMP_DECISIONS" xml:space="preserve">
+    <value>[pt-BR]Decision Types</value>
+  </data>
+  <data name="TEXT_MANAGE_BILLSOFT_EXEMPTIONS" xml:space="preserve">
+    <value>[pt-BR]Manage BillSoft Exemptions</value>
+  </data>
+  <data name="TEXT_MANAGE_BILLSOFT_OVERRIDES" xml:space="preserve">
+    <value>[pt-BR]Manage BillSoft Overrides</value>
   </data>
   <data name="TEXT_MANAGE_CALENDARS" xml:space="preserve">
     <value>Gerenciar calendários</value>
@@ -441,6 +480,9 @@
   <data name="TEXT_PAYMENT_METHODS" xml:space="preserve">
     <value>Métodos de pagamento</value>
   </data>
+  <data name="TEXT_PAYMENT_TRANSACTIONS" xml:space="preserve">
+    <value>[pt-BR]Payment Transactions</value>
+  </data>
   <data name="TEXT_PAYMENTS" xml:space="preserve">
     <value>Pagamentos</value>
   </data>
@@ -458,6 +500,15 @@
   </data>
   <data name="TEXT_QUEUE_ADHOC_REPORTS" xml:space="preserve">
     <value>Colocar relatórios adhoc na fila</value>
+  </data>
+  <data name="TEXT_QUOTING" xml:space="preserve">
+    <value>[pt-BR]Manage Quotes</value>
+  </data>
+  <data name="TEXT_QUOTING_LIST" xml:space="preserve">
+    <value>[pt-BR]View All Quotes</value>
+  </data>
+  <data name="TEXT_REFRESH" xml:space="preserve">
+    <value>[pt-BR]Refresh</value>
   </data>
   <data name="TEXT_REJECTED_FILES" xml:space="preserve">
     <value>Arquivos rejeitados</value>
@@ -495,14 +546,23 @@
   <data name="TEXT_SECURITY" xml:space="preserve">
     <value>Segurança</value>
   </data>
+  <data name="TEXT_SELF_CARE_PORTAL" xml:space="preserve">
+    <value>[pt-BR]Self Care Portal</value>
+  </data>
   <data name="TEXT_SEND_EMAIL_DIALOG" xml:space="preserve">
     <value>Enviar e-mail</value>
+  </data>
+  <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
+    <value>[pt-BR]Shared Properties</value>
   </data>
   <data name="TEXT_SHARED_RATES" xml:space="preserve">
     <value>Taxas compartilhadas</value>
   </data>
   <data name="TEXT_SHOW_A_REPORT_INSTANCE_DETAILS" xml:space="preserve">
     <value>Exibir detalhes da instância do relatório</value>
+  </data>
+  <data name="TEXT_SHOW_ALL_CHANGES_SUMMARY" xml:space="preserve">
+    <value>Ver todas as alterações</value>
   </data>
   <data name="TEXT_SHOW_ALL_REPORT_PARAMETERS" xml:space="preserve">
     <value>Exibir todos os parâmetros de relatório</value>
@@ -512,6 +572,15 @@
   </data>
   <data name="TEXT_SHOW_DATAEXPORT_QUEUE_DASHBOARD" xml:space="preserve">
     <value>Fila de exportação de dados</value>
+  </data>
+  <data name="TEXT_SHOW_FAILED_CHANGES_SUMMARY" xml:space="preserve">
+    <value>Ver mudanças falharam</value>
+  </data>
+  <data name="TEXT_SHOW_ITEM_HISTORY" xml:space="preserve">
+    <value>[pt-BR]View Item History</value>
+  </data>
+  <data name="TEXT_SHOW_PENDING_CHANGES_SUMMARY" xml:space="preserve">
+    <value>Visualizar as alterações pendentes</value>
   </data>
   <data name="TEXT_SUBSCRIBER_LOG_ADD" xml:space="preserve">
     <value>Adicionar entrada de log</value>
@@ -558,9 +627,6 @@
   <data name="TEXT_UPDATE_EXISTING_REPORT_DEFINITIONS" xml:space="preserve">
     <value>Atualizar definição de relatório existente</value>
   </data>
-  <data name="TEXT_USAGE_AUDIT" xml:space="preserve">
-    <value>{PT-BR}Usage Calculation Decision Details</value>
-  </data>
   <data name="TEXT_USM" xml:space="preserve">
     <value>Manutenção do servidor de utilização</value>
   </data>
@@ -579,35 +645,20 @@
   <data name="TEXT_VIEWONLINE_BILL" xml:space="preserve">
     <value>Exibir fatura online</value>
   </data>
-  <data name="TEXT_APPROVAL_FRAMEWORK_MANAGEMENT" xml:space="preserve">
-    <value>Aprovações</value>
+  <data name="TEXT_USAGE_AUDIT" xml:space="preserve">
+    <value>[pt-BR]Usage Audit</value>
   </data>
-  <data name="TEXT_SHOW_ITEM_HISTORY" xml:space="preserve">
-    <value>View Item History</value>
+  <data name="TEXT_ADD_TENANT" xml:space="preserve">
+    <value>[pt-BR]Add Partition</value>
   </data>
-  <data name="TEXT_SHOW_ALL_CHANGES_SUMMARY" xml:space="preserve">
-    <value>Ver todas as alterações</value>
+  <data name="TEXT_REPORTS" xml:space="preserve">
+    <value>[pt-BR]Reports</value>
   </data>
-  <data name="TEXT_SHOW_PENDING_CHANGES_SUMMARY" xml:space="preserve">
-    <value>Visualizar as alterações pendentes</value>
+  <data name="TEXT_USAGE_PROCESSING" xml:space="preserve">
+    <value>[pt-BR]Usage Processing</value>
   </data>
-  <data name="TEXT_SHOW_FAILED_CHANGES_SUMMARY" xml:space="preserve">
-    <value>Ver mudanças falharam</value>
-  </data>
-  <data name="TEXT_SHARED_PROPERTIES" xml:space="preserve">
-    <value>Shared Properties</value>
-  </data>
-  <data name="TEXT_PAYMENT_TRANSACTIONS" xml:space="preserve">
-    <value>Payment Transactions</value>
-  </data>
-  <data name="TEXT_MANAGE_AMP_DECISIONS" xml:space="preserve">
-    <value>[pt-BR]</value>
-  </data>
-  <data name="TEXT_ASSIGN_BILL_MESSAGES" xml:space="preserve">
-    <value>[pt-BR]</value>
-  </data>
-  <data name="TEXT_ADD_CHILD_ACCOUNT" xml:space="preserve">
-    <value>[pt-BR]Add child Account</value>
+  <data name="TEXT_ACCOUNT" xml:space="preserve">
+    <value>[pt-BR]Account</value>
   </data>
   <data name="TEXT_BILL_MESSAGES" xml:space="preserve">
     <value>[pt-BR]Bill Messages</value>
@@ -624,19 +675,7 @@
   <data name="TEXT_PRODUCT_DASHBOARD" xml:space="preserve">
     <value>[pt-BR]Product Dashboard</value>
   </data>
-  <data name="TEXT_REPORTS" xml:space="preserve">
-    <value>[pt-BR] Reports</value>
+  <data name="TEXT_SEARCH" xml:space="preserve">
+    <value>[pt-BR]Search</value>
   </data>
-  <data name="TEXT_USAGE_PROCESSING" xml:space="preserve">
-    <value>[pt-BR]Usage Processing</value>
-  </data>
-  <data name="TEXT_ADD_PARTITION" xml:space="preserve">
-    <value>[pt-BR]Add Partition</value>
-  </data>
-  <data name="TEXT_QUOTING" xml:space="preserve">
-    <value>[pt-BR]Manage Quotes</value>
-  </data>
-  <data name="TEXT_ACCOUNT" xml:space="preserve">
-    <value>[pt-BR]Account</value>
-  </data>    
 </root>
