--- a/App_GlobalResources/Reports.it.resx
+++ b/App_GlobalResources/Reports.it.resx
@@ -118,153 +118,153 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="TEXT_ADAPTER_NAME" xml:space="preserve">
-    <value>[it] Adapter Name</value>
+    <value>[IT]Adapter Name</value>
   </data>
   <data name="TEXT_AMOUNT" xml:space="preserve">
-    <value>[it] Amount</value>
+    <value>[IT]Amount</value>
   </data>
   <data name="TEXT_AMOUNT_IF_NOT_PRORATED" xml:space="preserve">
-    <value>[it] Amount would have if it weren't Prorated</value>
+    <value>[IT]Amount would have if it weren't Prorated</value>
   </data>
   <data name="TEXT_CODE" xml:space="preserve">
-    <value>[it] Code</value>
+    <value>[IT]Code</value>
   </data>
   <data name="TEXT_COMPLETED" xml:space="preserve">
-    <value>[it] Completed</value>
+    <value>[IT]Completed</value>
   </data>
   <data name="TEXT_COMPOUNDED_PI_TEMPLATE" xml:space="preserve">
-    <value>[it] Compounded PI Template</value>
+    <value>[IT]Compounded PI Template</value>
   </data>
   <data name="TEXT_CONTRIBUTING_ACCOUNTS" xml:space="preserve">
-    <value>[it] Contributing Accounts</value>
+    <value>[IT]Contributing Accounts</value>
   </data>
   <data name="TEXT_COUNT" xml:space="preserve">
-    <value>[it] Count</value>
+    <value>[IT]Count</value>
   </data>
   <data name="TEXT_CURRENCY" xml:space="preserve">
-    <value>[it] Currency</value>
+    <value>[IT]Currency</value>
   </data>
   <data name="TEXT_DATE_FIRST" xml:space="preserve">
-    <value>[it] Date First</value>
+    <value>[IT]Date First</value>
   </data>
   <data name="TEXT_DATE_HISTORY" xml:space="preserve">
-    <value>[it] Date History</value>
+    <value>[IT]Date History</value>
   </data>
   <data name="TEXT_DATE_LAST" xml:space="preserve">
-    <value>[it] Date Last</value>
+    <value>[IT]Date Last</value>
   </data>
   <data name="TEXT_DISCOUNT_NAME" xml:space="preserve">
-    <value>[it] Discount Name</value>
+    <value>[IT]Discount Name</value>
   </data>
   <data name="TEXT_DISMISSED" xml:space="preserve">
-    <value>[it] Dismissed</value>
+    <value>[IT]Dismissed</value>
   </data>
   <data name="TEXT_DISTINCT_PAYEES" xml:space="preserve">
-    <value>[it] Distinct Payees</value>
+    <value>[IT]Distinct Payees</value>
   </data>
   <data name="TEXT_DISTINCT_PAYERS" xml:space="preserve">
-    <value>[it] Distinct Payers</value>
+    <value>[IT]Distinct Payers</value>
   </data>
   <data name="TEXT_EXPECTED" xml:space="preserve">
-    <value>[it] Expected</value>
+    <value>[IT]Expected</value>
   </data>
   <data name="TEXT_FAILED" xml:space="preserve">
-    <value>[it] Failed</value>
+    <value>[IT]Failed</value>
   </data>
   <data name="TEXT_GENERATION_REASON" xml:space="preserve">
-    <value>[it] Reason for Generation</value>
+    <value>[IT]Reason for Generation</value>
   </data>
   <data name="TEXT_GROUP_SUBSCRIPTION" xml:space="preserve">
-    <value>[it] Group Subscription</value>
+    <value>[IT]Group Subscription</value>
   </data>
   <data name="TEXT_INVOICE_METHOD" xml:space="preserve">
-    <value>[it] Invoice Method</value>
+    <value>[IT]Invoice Method</value>
   </data>
   <data name="TEXT_INVOICE_NUMBER" xml:space="preserve">
-    <value>[it] Invoice Number</value>
+    <value>[IT]Invoice Number</value>
   </data>
   <data name="TEXT_MESSAGE" xml:space="preserve">
-    <value>[it] Message</value>
+    <value>[IT]Message</value>
   </data>
   <data name="TEXT_METERED" xml:space="preserve">
-    <value>[it] Metered</value>
+    <value>[IT]Metered</value>
   </data>
   <data name="TEXT_MONETARY_AMOUNT" xml:space="preserve">
-    <value>[it] Monetary Amount</value>
+    <value>[IT]Monetary Amount</value>
   </data>
   <data name="TEXT_NAMESPACE" xml:space="preserve">
-    <value>[it] Namespace</value>
+    <value>[IT]Namespace</value>
   </data>
   <data name="TEXT_NON_COMPOUNDED_PI_TEMPLATE" xml:space="preserve">
-    <value>[it] Non-Compounded PI Template</value>
+    <value>[IT]Non-Compounded PI Template</value>
   </data>
   <data name="TEXT_NUM_ADV_RCS_CREDITS_GENERATED" xml:space="preserve">
-    <value>[it] # of Advanced RCs Credits Generated</value>
+    <value>[IT]# of Advanced RCs Credits Generated</value>
   </data>
   <data name="TEXT_NUM_ADV_RCS_GENERATED" xml:space="preserve">
-    <value>[it] # of Advanced RCs Generated</value>
+    <value>[IT]# of Advanced RCs Generated</value>
   </data>
   <data name="TEXT_NUM_ARREARS_GENERATED" xml:space="preserve">
-    <value>[it] # of Arrears Generated</value>
+    <value>[IT]# of Arrears Generated</value>
   </data>
   <data name="TEXT_NUM_DAYS_IN_PERIOD" xml:space="preserve">
-    <value>[it] # of Days in Period</value>
+    <value>[IT]# of Days in Period</value>
   </data>
   <data name="TEXT_NUM_DAYS_PRORATED" xml:space="preserve">
-    <value>[it] # of Days Prorated</value>
+    <value>[IT]# of Days Prorated</value>
   </data>
   <data name="TEXT_NUM_DISCOUNTS_GENERATED" xml:space="preserve">
-    <value>[it] # of Discounts Generated</value>
+    <value>[IT]# of Discounts Generated</value>
   </data>
   <data name="TEXT_NUM_INVOICES" xml:space="preserve">
-    <value>[it] # of Invoices</value>
+    <value>[IT]# of Invoices</value>
   </data>
   <data name="TEXT_NUM_NRCS_GENERATED" xml:space="preserve">
-    <value>[it] Number of NRCs Generated</value>
+    <value>[IT]Number of NRCs Generated</value>
   </data>
   <data name="TEXT_NUM_TRANS_AFFECTED" xml:space="preserve">
-    <value>[it] # of Transactions Affected</value>
+    <value>[IT]# of Transactions Affected</value>
   </data>
   <data name="TEXT_NUM_TRANS_GENERATED" xml:space="preserve">
-    <value>[it] # of Transactions Generated</value>
+    <value>[IT]# of Transactions Generated</value>
   </data>
   <data name="TEXT_PAYER" xml:space="preserve">
-    <value>[it] Payer</value>
+    <value>[IT]Payer</value>
   </data>
   <data name="TEXT_PERCENTAGE" xml:space="preserve">
-    <value>[it] Percentage</value>
+    <value>[IT]Percentage</value>
   </data>
   <data name="TEXT_PI_TEMPLATE" xml:space="preserve">
-    <value>[it] PI Template</value>
+    <value>[IT]PI Template</value>
   </data>
   <data name="TEXT_PO_SUBSCRIBED_TO" xml:space="preserve">
-    <value>[it] PO Subscribed to</value>
+    <value>[IT]PO Subscribed to</value>
   </data>
   <data name="TEXT_PRORATION_REASON" xml:space="preserve">
-    <value>[it] Reason for Proration</value>
+    <value>[IT]Reason for Proration</value>
   </data>
   <data name="TEXT_RC_TYPE" xml:space="preserve">
-    <value>[it] Type of RC</value>
+    <value>[IT]Type of RC</value>
   </data>
   <data name="TEXT_STATE" xml:space="preserve">
-    <value>[it] State</value>
+    <value>[IT]State</value>
   </data>
   <data name="TEXT_STATUS" xml:space="preserve">
-    <value>[it] Status</value>
+    <value>[IT]Status</value>
   </data>
   <data name="TEXT_TAX_AMOUNT" xml:space="preserve">
-    <value>[it] Tax Amount</value>
+    <value>[IT]Tax Amount</value>
   </data>
   <data name="TEXT_TOTAL" xml:space="preserve">
-    <value>[it] Total</value>
+    <value>[IT]Total</value>
   </data>
   <data name="TEXT_TOTAL_MONETARY_AMOUNT" xml:space="preserve">
-    <value>[it] Total Monetary Amount</value>
+    <value>[IT]Total Monetary Amount</value>
   </data>
   <data name="TEXT_VIEW_ID" xml:space="preserve">
-    <value>[it] View Id</value>
+    <value>[IT]View Id</value>
   </data>
   <data name="TEXT_VIEW_NAME" xml:space="preserve">
-    <value>[it] View Name</value>
+    <value>[IT]View Name</value>
   </data>
 </root>
