--- a/App_GlobalResources/Reports.ja.resx
+++ b/App_GlobalResources/Reports.ja.resx
@@ -118,153 +118,153 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="TEXT_ADAPTER_NAME" xml:space="preserve">
-    <value>[ja] Adapter Name</value>
+    <value>[JA]Adapter Name</value>
   </data>
   <data name="TEXT_AMOUNT" xml:space="preserve">
-    <value>[ja] Amount</value>
+    <value>[JA]Amount</value>
   </data>
   <data name="TEXT_AMOUNT_IF_NOT_PRORATED" xml:space="preserve">
-    <value>[ja] Amount would have if it weren't Prorated</value>
+    <value>[JA]Amount would have if it weren't Prorated</value>
   </data>
   <data name="TEXT_CODE" xml:space="preserve">
-    <value>[ja] Code</value>
+    <value>[JA]Code</value>
   </data>
   <data name="TEXT_COMPLETED" xml:space="preserve">
-    <value>[ja] Completed</value>
+    <value>[JA]Completed</value>
   </data>
   <data name="TEXT_COMPOUNDED_PI_TEMPLATE" xml:space="preserve">
-    <value>[ja] Compounded PI Template</value>
+    <value>[JA]Compounded PI Template</value>
   </data>
   <data name="TEXT_CONTRIBUTING_ACCOUNTS" xml:space="preserve">
-    <value>[ja] Contributing Accounts</value>
+    <value>[JA]Contributing Accounts</value>
   </data>
   <data name="TEXT_COUNT" xml:space="preserve">
-    <value>[ja] Count</value>
+    <value>[JA]Count</value>
   </data>
   <data name="TEXT_CURRENCY" xml:space="preserve">
-    <value>[ja] Currency</value>
+    <value>[JA]Currency</value>
   </data>
   <data name="TEXT_DATE_FIRST" xml:space="preserve">
-    <value>[ja] Date First</value>
+    <value>[JA]Date First</value>
   </data>
   <data name="TEXT_DATE_HISTORY" xml:space="preserve">
-    <value>[ja] Date History</value>
+    <value>[JA]Date History</value>
   </data>
   <data name="TEXT_DATE_LAST" xml:space="preserve">
-    <value>[ja] Date Last</value>
+    <value>[JA]Date Last</value>
   </data>
   <data name="TEXT_DISCOUNT_NAME" xml:space="preserve">
-    <value>[ja] Discount Name</value>
+    <value>[JA]Discount Name</value>
   </data>
   <data name="TEXT_DISMISSED" xml:space="preserve">
-    <value>[ja] Dismissed</value>
+    <value>[JA]Dismissed</value>
   </data>
   <data name="TEXT_DISTINCT_PAYEES" xml:space="preserve">
-    <value>[ja] Distinct Payees</value>
+    <value>[JA]Distinct Payees</value>
   </data>
   <data name="TEXT_DISTINCT_PAYERS" xml:space="preserve">
-    <value>[ja] Distinct Payers</value>
+    <value>[JA]Distinct Payers</value>
   </data>
   <data name="TEXT_EXPECTED" xml:space="preserve">
-    <value>[ja] Expected</value>
+    <value>[JA]Expected</value>
   </data>
   <data name="TEXT_FAILED" xml:space="preserve">
-    <value>[ja] Failed</value>
+    <value>[JA]Failed</value>
   </data>
   <data name="TEXT_GENERATION_REASON" xml:space="preserve">
-    <value>[ja] Reason for Generation</value>
+    <value>[JA]Reason for Generation</value>
   </data>
   <data name="TEXT_GROUP_SUBSCRIPTION" xml:space="preserve">
-    <value>[ja] Group Subscription</value>
+    <value>[JA]Group Subscription</value>
   </data>
   <data name="TEXT_INVOICE_METHOD" xml:space="preserve">
-    <value>[ja] Invoice Method</value>
+    <value>[JA]Invoice Method</value>
   </data>
   <data name="TEXT_INVOICE_NUMBER" xml:space="preserve">
-    <value>[ja] Invoice Number</value>
+    <value>[JA]Invoice Number</value>
   </data>
   <data name="TEXT_MESSAGE" xml:space="preserve">
-    <value>[ja] Message</value>
+    <value>[JA]Message</value>
   </data>
   <data name="TEXT_METERED" xml:space="preserve">
-    <value>[ja] Metered</value>
+    <value>[JA]Metered</value>
   </data>
   <data name="TEXT_MONETARY_AMOUNT" xml:space="preserve">
-    <value>[ja] Monetary Amount</value>
+    <value>[JA]Monetary Amount</value>
   </data>
   <data name="TEXT_NAMESPACE" xml:space="preserve">
-    <value>[ja] Namespace</value>
+    <value>[JA]Namespace</value>
   </data>
   <data name="TEXT_NON_COMPOUNDED_PI_TEMPLATE" xml:space="preserve">
-    <value>[ja] Non-Compounded PI Template</value>
+    <value>[JA]Non-Compounded PI Template</value>
   </data>
   <data name="TEXT_NUM_ADV_RCS_CREDITS_GENERATED" xml:space="preserve">
-    <value>[ja] # of Advanced RCs Credits Generated</value>
+    <value>[JA]# of Advanced RCs Credits Generated</value>
   </data>
   <data name="TEXT_NUM_ADV_RCS_GENERATED" xml:space="preserve">
-    <value>[ja] # of Advanced RCs Generated</value>
+    <value>[JA]# of Advanced RCs Generated</value>
   </data>
   <data name="TEXT_NUM_ARREARS_GENERATED" xml:space="preserve">
-    <value>[ja] # of Arrears Generated</value>
+    <value>[JA]# of Arrears Generated</value>
   </data>
   <data name="TEXT_NUM_DAYS_IN_PERIOD" xml:space="preserve">
-    <value>[ja] # of Days in Period</value>
+    <value>[JA]# of Days in Period</value>
   </data>
   <data name="TEXT_NUM_DAYS_PRORATED" xml:space="preserve">
-    <value>[ja] # of Days Prorated</value>
+    <value>[JA]# of Days Prorated</value>
   </data>
   <data name="TEXT_NUM_DISCOUNTS_GENERATED" xml:space="preserve">
-    <value>[ja] # of Discounts Generated</value>
+    <value>[JA]# of Discounts Generated</value>
   </data>
   <data name="TEXT_NUM_INVOICES" xml:space="preserve">
-    <value>[ja] # of Invoices</value>
+    <value>[JA]# of Invoices</value>
   </data>
   <data name="TEXT_NUM_NRCS_GENERATED" xml:space="preserve">
-    <value>[ja] Number of NRCs Generated</value>
+    <value>[JA]Number of NRCs Generated</value>
   </data>
   <data name="TEXT_NUM_TRANS_AFFECTED" xml:space="preserve">
-    <value>[ja] # of Transactions Affected</value>
+    <value>[JA]# of Transactions Affected</value>
   </data>
   <data name="TEXT_NUM_TRANS_GENERATED" xml:space="preserve">
-    <value>[ja] # of Transactions Generated</value>
+    <value>[JA]# of Transactions Generated</value>
   </data>
   <data name="TEXT_PAYER" xml:space="preserve">
-    <value>[ja] Payer</value>
+    <value>[JA]Payer</value>
   </data>
   <data name="TEXT_PERCENTAGE" xml:space="preserve">
-    <value>[ja] Percentage</value>
+    <value>[JA]Percentage</value>
   </data>
   <data name="TEXT_PI_TEMPLATE" xml:space="preserve">
-    <value>[ja] PI Template</value>
+    <value>[JA]PI Template</value>
   </data>
   <data name="TEXT_PO_SUBSCRIBED_TO" xml:space="preserve">
-    <value>[ja] PO Subscribed to</value>
+    <value>[JA]PO Subscribed to</value>
   </data>
   <data name="TEXT_PRORATION_REASON" xml:space="preserve">
-    <value>[ja] Reason for Proration</value>
+    <value>[JA]Reason for Proration</value>
   </data>
   <data name="TEXT_RC_TYPE" xml:space="preserve">
-    <value>[ja] Type of RC</value>
+    <value>[JA]Type of RC</value>
   </data>
   <data name="TEXT_STATE" xml:space="preserve">
-    <value>[ja] State</value>
+    <value>[JA]State</value>
   </data>
   <data name="TEXT_STATUS" xml:space="preserve">
-    <value>[ja] Status</value>
+    <value>[JA]Status</value>
   </data>
   <data name="TEXT_TAX_AMOUNT" xml:space="preserve">
-    <value>[ja] Tax Amount</value>
+    <value>[JA]Tax Amount</value>
   </data>
   <data name="TEXT_TOTAL" xml:space="preserve">
-    <value>[ja] Total</value>
+    <value>[JA]Total</value>
   </data>
   <data name="TEXT_TOTAL_MONETARY_AMOUNT" xml:space="preserve">
-    <value>[ja] Total Monetary Amount</value>
+    <value>[JA]Total Monetary Amount</value>
   </data>
   <data name="TEXT_VIEW_ID" xml:space="preserve">
-    <value>[ja] View Id</value>
+    <value>[JA]View Id</value>
   </data>
   <data name="TEXT_VIEW_NAME" xml:space="preserve">
-    <value>[ja] View Name</value>
+    <value>[JA]View Name</value>
   </data>
 </root>
