--- a/App_GlobalResources/UsageProcessingResources.de.resx
+++ b/App_GlobalResources/UsageProcessingResources.de.resx
@@ -118,81 +118,168 @@
         <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
     </resheader>
     <data name="GRID_TITLE" xml:space="preserve">
-        <value>Usage Events</value>
+        <value>[DE]Usage Events</value>
     </data>
     <data name="NO_RECORDS_TEXT" xml:space="preserve">
-        <value>No records found.</value>
+        <value>[DE]No records found.</value>
     </data>
     <data name="TEXT_ID_SESS" xml:space="preserve">
-        <value>Session Id</value>
+        <value>[DE]Session Id</value>
     </data>
     <data name="TEXT_ID_ACC" xml:space="preserve">
-        <value>Account</value>
+        <value>[DE]Account</value>
     </data>
     <data name="TEXT_ID_USAGE_INTERVAL" xml:space="preserve">
-        <value>Interval</value>
+        <value>[DE]Interval</value>
     </data>
     <data name="TEXT_DT_SESSION" xml:space="preserve">
-        <value>Metered Date</value>
+        <value>[DE]Metered Date</value>
     </data>
     <data name="TEXT_DT_CRT" xml:space="preserve">
-        <value>Processed Date</value>
+        <value>[DE]Processed Date</value>
     </data>
     <data name="TEXT_AMOUNT" xml:space="preserve">
-        <value>Amount</value>
+        <value>[DE]Amount</value>
     </data>
     <data name="TEXT_AM_CURRENCY" xml:space="preserve">
-        <value>Currency</value>
+        <value>[DE]Currency</value>
     </data>
     <data name="TEXT_INDEX" xml:space="preserve">
-        <value>Index</value>
+        <value>[DE]Index</value>
     </data>
     <data name="TEXT_NM_VIEW" xml:space="preserve">
-        <value>Product View</value>
+        <value>[DE]Product View</value>
     </data>
     <data name="TEXT_NM_PO" xml:space="preserve">
-        <value>Product Offering</value>
+        <value>[DE]Product Offering</value>
     </data>
     <data name="TEXT_NM_PI_TEMPLATE" xml:space="preserve">
-        <value>Priceable Item Template</value>
+        <value>[DE]Priceable Item Template</value>
     </data>
     <data name="TEXT_NM_PI_INSTANCE" xml:space="preserve">
-        <value>Priceable Item Instance</value>
+        <value>[DE]Priceable Item Instance</value>
     </data>
     <data name="TEXT_ID_DECISION" xml:space="preserve">
-        <value>Decision Id</value>
+        <value>[DE]Decision Id</value>
     </data>
     <data name="TEXT_AMOUNT_BEFORE" xml:space="preserve">
-        <value>Amount Before</value>
+        <value>[DE]Amount Before</value>
     </data>
     <data name="TEXT_AMOUNT_AFTER" xml:space="preserve">
-        <value>Amount After</value>
+        <value>[DE]Amount After</value>
     </data>
     <data name="TEXT_PERCENT_ELIGIBLE" xml:space="preserve">
-        <value>% Eligible</value>
+        <value>[DE]% Eligible</value>
     </data>
     <data name="TEXT_QUALIFIED_BEFORE" xml:space="preserve">
-        <value>Counter Before</value>
+        <value>[DE]Counter Before</value>
     </data>
     <data name="TEXT_QUALIFIED_AFTER" xml:space="preserve">
-        <value>Counter After</value>
+        <value>[DE]Counter After</value>
     </data>
     <data name="TEXT_AMOUNT_CHAIN_GROUP" xml:space="preserve">
-        <value>Amount Chain Group</value>
+        <value>[DE]Amount Chain Group</value>
     </data>
     <data name="TEXT_ACCOUNT_QUALIFICATION_GROUP" xml:space="preserve">
-        <value>Contributing Accounts</value>
+        <value>[DE]Contributing Accounts</value>
     </data>
     <data name="TEXT_USAGE_QUALIFICATION_GROUP" xml:space="preserve">
-        <value>Contributing Usage</value>
+        <value>[DE]Contributing Usage</value>
     </data>
     <data name="TEXT_TX_DESCRIPTION" xml:space="preserve">
-        <value>Description</value>
+        <value>[DE]Description</value>
     </data>
     <data name="TEXT_NM_DECISION" xml:space="preserve">
-        <value>Decision Type</value>
+        <value>[DE]Decision Type</value>
     </data>
     <data name="TEXT_GRID_TITLE" xml:space="preserve">
-        <value>Usage Audit</value>
+        <value>[DE]Usage Audit</value>
+    </data>
+    <data name="BEFORE_AFTER_GRID_TITLE" xml:space="preserve">
+        <value>[DE]Usage Changes</value>
+    </data>
+    <data name="TEXT_NM_COLUMN" xml:space="preserve">
+        <value>[DE]Column</value>
+    </data>
+    <data name="TEXT_TX_BEFORE" xml:space="preserve">
+        <value>[DE]Value Before</value>
+    </data>
+    <data name="TEXT_TX_AFTER" xml:space="preserve">
+        <value>[DE]Value After</value>
+    </data>
+    <data name="TEXT_B_CHANGED" xml:space="preserve">
+        <value>[DE]Changed?</value>
+    </data>
+    <data name="TEXT_NM_PV_TABLE" xml:space="preserve">
+        <value>[DE]Product View Table</value>
+    </data>
+    <data name="TEXT_TIER_PRIORITY" xml:space="preserve">
+        <value>[DE]Priority</value>
+    </data>
+    <data name="TEXT_TIER_DISCOUNT" xml:space="preserve">
+        <value>[DE]Discount</value>
+    </data>
+    <data name="TEXT_TIER_DOMAIN" xml:space="preserve">
+        <value>[DE]Domain</value>
+    </data>
+    <data name="TEXT_TIER_DOMAIN_APPLY" xml:space="preserve">
+        <value>[DE]Apply to Domain</value>
+    </data>
+    <data name="TEXT_TIER_DOMAIN_IMPACT" xml:space="preserve">
+        <value>[DE]Impact Domain</value>
+    </data>
+    <data name="TEXT_CYCLES" xml:space="preserve">
+        <value>[DE]Cycle Count</value>
+    </data>
+    <data name="TEXT_CYCLE_UNIT_TYPE" xml:space="preserve">
+        <value>[DE]Cycle Type</value>
+    </data>
+    <data name="TEXT_CYCLE_UNITS_PER_TIER" xml:space="preserve">
+        <value>[DE]Cycles per Tier</value>
+    </data>
+    <data name="TEXT_TIER_NAME" xml:space="preserve">
+        <value>[DE]Tier Name</value>
+    </data>
+    <data name="TEXT_TITLE" xml:space="preserve">
+        <value>[DE]NowCast Title</value>
+    </data>
+    <data name="TEXT_SUBTITLE" xml:space="preserve">
+        <value>[DE]NowCast Subtitle</value>
+    </data>
+    <data name="TEXT_CHARGE_TYPE" xml:space="preserve">
+        <value>[DE]Charge Method</value>
+    </data>
+    <data name="TEXT_CHARGE_TYPE_ID" xml:space="preserve">
+        <value>[DE]Generate Charge of Type</value>
+    </data>
+    <data name="TEXT_TIER_START" xml:space="preserve">
+        <value>[DE]Tier Start</value>
+    </data>
+    <data name="TEXT_TIER_END" xml:space="preserve">
+        <value>[DE]Tier End</value>
+    </data>
+    <data name="TEXT_TIER_METRIC" xml:space="preserve">
+        <value>[DE]Tier Metric</value>
+    </data>
+    <data name="TEXT_TIER_TYPE" xml:space="preserve">
+        <value>[DE]Tier Type</value>
+    </data>
+    <data name="TEXT_CHARGE_ON_FINAL" xml:space="preserve">
+        <value>[DE]Generate Charge upon Finalization</value>
+    </data>
+    <data name="TEXT_CHARGE_ON_EVERY" xml:space="preserve">
+        <value>[DE]Generate Charge Every Time</value>
+    </data>
+    <data name="TEXT_CHARGE_ON_INBOUND" xml:space="preserve">
+        <value>[DE]Generate Charge upon Tier Entry</value>
+    </data>
+    <data name="TEXT_CHARGE_ON_OUTBOUND" xml:space="preserve">
+        <value>[DE]Generate Charge upon Tier Exit</value>
+    </data>
+    <data name="TEXT_PER_UNIT_RATE" xml:space="preserve">
+        <value>[DE]Per Unit Rate</value>
+    </data>
+    <data name="TEXT_PER_EVENT_RATE" xml:space="preserve">
+        <value>[DE]Per Event Rate</value>
     </data>
 </root>
